@@ -2,6 +2,7 @@ Added since 0.0.1
 - Allow pin to only be active during a particular time of day
 - Prevent the need to restart after settings change
 - Remember the pin after it has been entered once (Forget after screensaver starts)
+- Support DVD image directory playing
 
 v1.0.0
 - Initial Version
